--- a/AT_A4_skills_4.html
+++ b/AT_A4_skills_4.html
@@ -9,7 +9,7 @@
 		<nav>
 			<img src="Images/my_logo.png" alt="Logo">			
 				<h1>Andrew Terbizan</h1>
-				<a href="index_A4.html">Home</a>
+				<a href="index.html">Home</a>
 				<a href="AT_A4_about.html">About Me</a>
 				<a href="AT_A4_resume.html">Resume</a>
 				<a href="AT_skillsList.html">Skills</a>
