--- a/AT_A4_about.html
+++ b/AT_A4_about.html
@@ -26,5 +26,7 @@
 	<img style="scale: 60%; margin: 0%; padding-bottom: 20%;" src="Images/laptop.png" alt="My Laptop">
 
 </body>
-<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.</footer>
+<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.
+	<a href="sign_up.html" target="_blank">Click here to subscribe to my newsletter.</a>
+</footer>
 </html>
