--- a/AT_A4_resume.html
+++ b/AT_A4_resume.html
@@ -45,5 +45,7 @@
 
 	<img style="scale: 60%; margin: 0%; padding-bottom: 20%;" src="Images/Tree.png" alt="Trees surrounding dorm">
 </body>
-<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.</footer>
+<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.
+	<a href="sign_up.html" target="_blank">Click here to subscribe to my newsletter.</a>
+</footer>
 </html>
