--- a/index.html
+++ b/index.html
@@ -51,5 +51,7 @@
 
 		<img style="scale: 60%; margin: 0%; padding-bottom: 20%;" src="Images/sonic_stuff.png" alt="My collection">
 </body>
-<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.</footer>
+<footer>Phone:0411738373<br>Email Address: AndyT@Terbizan.com<br><br>&copy; 2024 Andrew Terbizan is the copyright holder of all content located on this website.
+	<a href="sign_up.html" target="_blank">Click here to subscribe to my newsletter.</a>
+</footer>
 </html>
